HelloUltraviolet/Fixtures/RejectedSource/Procedures/RecordMethodCallArgumentType/Expected.uv
//! Expected diagnostic metadata for the RecordMethodCallArgumentType rejected-source specimen.

expectedDiagnostic("E-SEM-2526", "rule.15.T-Record-MethodCall")
